syntax = "proto3";

option java_multiple_files = false;
option java_package = "cn.catguild.system.api";
option java_outer_classname = "AppClientProto";

import 'api_common.proto';
import 'menu_message.proto';

// 定义消息结构体
message AppRequest{
  repeated int64 appIds = 1;
}

message AppDTOResponse{
  ApiResponse apiResponse = 1;
  AppDTO  app = 2;
}

message AppDTOListResponse{
  ApiResponse apiResponse = 1;
  repeated AppDTO apps = 2;
}

message AppDTO{
  int64 appId = 1;
  repeated MenuDTO menus = 2;
}

// 定义服务
service AppClient{

  rpc listApp(AppRequest) returns (AppDTOListResponse){

  }

}